<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/datoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datoTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="13dp" />

    <TextView
        android:id="@+id/dato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/kravpunktTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kravPunktTxt"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/kravPunkt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="178dp" />

    <TextView
        android:id="@+id/tekstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekstTxt"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="240dp" />

    <TextView
        android:id="@+id/tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/karTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karTxt"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="392dp" />

    <ImageView
        android:id="@+id/tilsynsBilde"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:srcCompat="@mipmap/smil" />

</LinearLayout>